# input4mips-prep

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
scripts/: fix-IIASA-IAMC-scendraft-0-3-0.py  fix-fzj-cmip-ozone-1-0-incl-fill-value.py  fix-fzj-cmip-ozone-1-0.py
src/input4mips-prep/: __init__.py
src/input4mips_prep/: __init__.py  attributes.py  dimensions.py  time.py  variables.py
